[gd_scene load_steps=3 format=3 uid="uid://bavch4mqab5ei"]

[ext_resource type="Script" path="res://SettingSingleton.gd" id="1_akddt"]
[ext_resource type="Script" path="res://ErrorText.gd" id="2_p7cg5"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_akddt")

[node name="SettingsPanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AutoTimeWait" type="SpinBox" parent="SettingsPanel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -341.0
offset_top = -20.0
offset_right = 315.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="Label" type="Label" parent="SettingsPanel/AutoTimeWait"]
offset_left = -163.0
offset_top = 8.0
offset_right = -67.0
offset_bottom = 34.0
text = "Time to join:"

[node name="TimeBeforeRestart" type="SpinBox" parent="SettingsPanel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -341.0
offset_top = 19.0
offset_right = 315.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="Label" type="Label" parent="SettingsPanel/TimeBeforeRestart"]
offset_left = -163.0
offset_top = 9.0
offset_right = -6.0
offset_bottom = 35.0
text = "Time between Runs:"

[node name="CheckBox" type="CheckBox" parent="SettingsPanel"]
offset_left = 52.0
offset_top = 184.0
offset_right = 167.0
offset_bottom = 238.0
text = "Auto-Timer"

[node name="TransparencyMode" type="CheckBox" parent="SettingsPanel"]
offset_left = 216.0
offset_top = 184.0
offset_right = 398.0
offset_bottom = 238.0
text = "Transparency Mode"

[node name="ModeSelect" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Twitch" type="Button" parent="ModeSelect"]
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.493
anchor_right = 1.0
anchor_bottom = 0.493
offset_left = -216.0
offset_top = -27.8
offset_bottom = 36.2
grow_horizontal = 0
grow_vertical = 2
text = "Twitch"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = true

[node name="Mastadon" type="Button" parent="ModeSelect"]
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.493
anchor_right = 1.0
anchor_bottom = 0.493
offset_left = -616.0
offset_top = -27.8
offset_right = -400.0
offset_bottom = 36.2
grow_horizontal = 0
grow_vertical = 2
text = "Mastodon
"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = true

[node name="Picarto" type="Button" parent="ModeSelect"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1024.0
offset_top = -32.0
offset_right = -808.0
offset_bottom = 32.0
grow_horizontal = 0
grow_vertical = 2
text = "Picarto"
metadata/_edit_layout_mode = 1

[node name="MastodonSettings" type="Control" parent="ModeSelect"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Following" type="CheckBox" parent="ModeSelect/MastodonSettings"]
offset_left = 52.0
offset_top = 238.0
offset_right = 76.0
offset_bottom = 262.0
button_pressed = true

[node name="FollowingLabel" type="Label" parent="ModeSelect/MastodonSettings/Following"]
offset_left = 24.0
offset_right = 64.0
offset_bottom = 23.0
text = "Following"

[node name="Boosted" type="CheckBox" parent="ModeSelect/MastodonSettings"]
offset_left = 216.0
offset_top = 240.0
offset_right = 240.0
offset_bottom = 264.0
button_pressed = true

[node name="BoostedLabel" type="Label" parent="ModeSelect/MastodonSettings/Boosted"]
offset_left = 24.0
offset_top = -2.0
offset_right = 98.0
offset_bottom = 24.0
text = "Boosted"

[node name="Liked" type="CheckBox" parent="ModeSelect/MastodonSettings"]
offset_left = 408.0
offset_top = 240.0
offset_right = 432.0
offset_bottom = 264.0
button_pressed = true

[node name="LikedLabel" type="Label" parent="ModeSelect/MastodonSettings/Liked"]
offset_left = 24.0
offset_top = -2.0
offset_right = 98.0
offset_bottom = 24.0
text = "Liked
"

[node name="InputField2" type="TextEdit" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -296.0
offset_top = -32.0
offset_right = 296.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Twitch Name"
drag_and_drop_selection_enabled = false
wrap_mode = 1
metadata/_edit_layout_mode = 1

[node name="Button" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -136.0
offset_top = -96.0
offset_right = 136.0
grow_horizontal = 2
grow_vertical = 0
text = "Save"
metadata/_edit_layout_mode = 1

[node name="SettingsLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -54.5
offset_right = 54.5
offset_bottom = 42.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 28
text = "Settings"

[node name="StatusLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -54.0
offset_top = 56.0
offset_right = 55.0
offset_bottom = 98.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 28
text = "Status
"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_layout_mode = 1

[node name="Exit" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_bottom = 63.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 40
text = "X"
metadata/_edit_layout_mode = 1

[node name="Reset" type="Button" parent="."]
offset_right = 115.0
offset_bottom = 63.0
theme_override_font_sizes/font_size = 40
text = "Reset"
metadata/_edit_layout_mode = 1

[node name="FightCooldown" type="Timer" parent="."]
one_shot = true

[node name="AutoTimer" type="Timer" parent="."]
one_shot = true

[node name="SettingEntry" type="Button" parent="."]
offset_right = 113.0
offset_bottom = 63.0
theme_override_font_sizes/font_size = 28
text = "Settings"

[node name="ErrorText" type="Label" parent="."]
offset_top = 96.0
offset_right = 1024.0
offset_bottom = 160.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
script = ExtResource("2_p7cg5")

[node name="ErrorTime" type="Timer" parent="ErrorText"]
wait_time = 4.0

[connection signal="toggled" from="SettingsPanel/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="toggled" from="SettingsPanel/TransparencyMode" to="." method="_on_transparency_mode_toggled"]
[connection signal="pressed" from="ModeSelect/Twitch" to="." method="_on_twitch_pressed"]
[connection signal="pressed" from="ModeSelect/Mastadon" to="." method="_on_mastadon_pressed"]
[connection signal="pressed" from="ModeSelect/Picarto" to="." method="_on_picarto_pressed"]
[connection signal="toggled" from="ModeSelect/MastodonSettings/Following" to="." method="_on_following_toggled"]
[connection signal="toggled" from="ModeSelect/MastodonSettings/Boosted" to="." method="_on_boosted_toggled"]
[connection signal="toggled" from="ModeSelect/MastodonSettings/Liked" to="." method="_on_liked_toggled"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_reset_pressed"]
[connection signal="timeout" from="FightCooldown" to="." method="_on_fight_cooldown_timeout"]
[connection signal="timeout" from="AutoTimer" to="." method="_on_auto_timer_timeout"]
[connection signal="pressed" from="SettingEntry" to="." method="_on_setting_entry_pressed"]
[connection signal="timeout" from="ErrorText/ErrorTime" to="ErrorText" method="_on_error_time_timeout"]
